# ipmt

./: CMakeLists.txt  README.md  compile.sh  test.sh
src/: CMakeLists.txt  ipmt.cpp
src/compression/: Huffman.cpp  Huffman.h  LZ77.cpp  LZ77.h
src/indexing/: SuffixArray.cpp  SuffixArray.h
